#3992 - fixes to make the sidebar work when on smaller viewports

--- a/rundeckapp/grails-app/assets/scss/custom/mainbar.scss
+++ b/rundeckapp/grails-app/assets/scss/custom/mainbar.scss
@@ -7,6 +7,9 @@
     height: 38px;
     width: 38px;
   }
+  .navbar-toggle{
+    z-index: 1;
+  }
   .nav.navbar-nav{
     li{
       a{
